# scene_renderer

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
doc/: 基本設計書.md  詳細設計書.md
examples/: example_component_rendering.py  example_config_api.py  example_minimal.py
scene_renderer/: __init__.py  level.py  signal_validation.py
scene_renderer/receiver/: __init__.py  array.py  receiver.py
scene_renderer/renderer/: __init__.py  ambient_field_contributor.py  ambient_renderer.py  array_projector.py  contributor.py  noise_waveform.py  projector_factory.py  render_result.py  scene_renderer.py  sensor_noise.py  sensor_noise_contributor.py  source_field_contributor.py  source_projector.py  source_renderer.py
scene_renderer/renderer/propagation/: __init__.py  base.py  free_field.py  path.py
scene_renderer/scene/: __init__.py  ambient.py  envelope.py  environment.py  scene.py  source.py  spectrum.py  trajectory.py
tests/: test_component_rendering.py  test_minimal.py  test_signal_validity.py
