[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scene-renderer"
version = "0.1.0"
description = "受信信号生成用の Scene / Receiver / Renderer ライブラリ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]
keywords = ["acoustics", "array-signal-processing", "simulation", "scene-renderer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyright>=1.1.380",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
scene_renderer = ["py.typed"]

[tool.setuptools.packages.find]
include = ["scene_renderer*"]
exclude = ["tests*", "examples*", "doc*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
